realign catalogue text and fix search results alignment

--- a/app/assets/stylesheets/library.css
+++ b/app/assets/stylesheets/library.css
@@ -105,6 +105,8 @@
   background:black !important;
   color:white !important;
   display:inline-block;
+  padding-left:5px;
+  padding-right:5px;
 }
 .reference_search_result_is_c4d {
   color:#35848C;
@@ -259,6 +261,7 @@
   font-size:16px !important;
   color:#999999;
 }
+#library_search_reference_link_description,
 #library_reference_link_description {
   margin-top:10px;
 }
@@ -362,7 +365,6 @@ a.max_width {
 
 /*reference link show modal*/
 #reference_link_show_modal {
-  /*position: absolute;*/
   top:10px;
   width:90% !important;
 }
@@ -375,3 +377,15 @@ a.max_width {
   color: black;
 }
 /**/
+.liked_by_user_white_text {
+  color:white;
+}
+.counter_indicator_text_div.liked_by_user_white_text{
+  opacity:1 !important;
+  border-radius:35px;
+  line-height:1em;
+}
+#catalogue_wrapper {
+  position:absolute;
+  right:5px;
+}
